Ballons displaying readable-components correctly
refs #42

TODO: fix slight issue with render method changing animation-duration

--- a/client/src/components/readable/styles.css
+++ b/client/src/components/readable/styles.css
@@ -71,3 +71,14 @@
   border-bottom: 2px solid transparent;
   color: white;
 }
+
+.miniGame__theme {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding: 0.3vw;
+  color: white;
+  font-size: 20px;
+}
